# backend

./: .gitignore  README.md  pyproject.toml
data/sessions/year=2024/: ev_charging_session.parquet
data/sessions/year=2025/: ev_charging_session.parquet
data/stations/: seoul_station.csv  seoul_station.parquet  seoul_station.xlsx
src/: inverter.py  s3_load.py  to_s3_snowflake.py  tos3snowflake.py
src/adhoc/: adhoc.ipynb
src/common/: base_tasks.py  snowflake_conn.py
src/devcourse_project2/: __init__.py
src/pipelines/: analytics_station_utilization.py  analytics_station_utilization2.py  convert_xlsx_to_csv.py  fact_session_table_pipeline.py  load_station_stg.py  region_info_table_pipeline.py  s3_load.py  s3_upload_pipeline.py  session_stage_ext_table_pipeline.py  snowflake_pipeline.py  station_stg_pipeline.py  test_pipeline.py  visualization_table_pipeline.py
src/tasks/: convert_xlsx_to_parquet.py
src/utils/: conn_utils.py  file_utils.py
